# QUIC

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  pingpong_client.cc  pingpong_server.cc
quic-code/: README.md
quic-code/app/: cc_client.cc  cc_server.cc  pingpong_client.cc
quic-code/src/: CMakeLists.txt
quic-code/src/context/: common.hh
quic-code/src/payload/: common.hh
quic-code/src/utils/: bytestream.hh  random.hh  socket.cc  variable_codec.hh
quic-starter-code/: .clang-format  .gitignore
quic-starter-code/src/: config.hh
quic-starter-code/src/context/: common.hh  connection.hh  connection_id.cc  quic.cc  quic.hh
quic-starter-code/src/payload/: frame.hh  packet.hh
quic-starter-code/src/utils/: chunkstream.hh  interval.hh  socket.hh  variable_codec.cc  variable_codec.hh
src/: config.hh
src/context/: callback.hh  connection_id.hh  quic.cc
src/utils/: chunkstream.hh  interval.hh  log.cc  log.hh  random.cc  time.hh
